# ObVi-SLAM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
include/base_lib/: basic_utils.h
include/refactoring/: output_problem_data_extraction.h
include/refactoring/bounding_box_frontend/: bounding_box_front_end.h  bounding_box_front_end_creation_utils.h  bounding_box_front_end_helpers.h
include/refactoring/offline/: offline_problem_runner.h
include/refactoring/optimization/: object_pose_graph_optimizer.h  pose_graph_plus_objects_optimizer.h
include/refactoring/types/: ellipsoid_utils.h  vslam_basic_types_refactor.h
include/run_optimization_utils/: run_opt_utils.h
src/refactoring/long_term_map/: long_term_object_map_extraction.cpp
src/refactoring/visual_feature_processing/: orb_output_low_level_feature_reader.cpp
